--- a/CleanFtp/CleanFtp.csproj
+++ b/CleanFtp/CleanFtp.csproj
@@ -20,4 +20,10 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Dockerfile">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 </Project>
