--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -85,7 +85,7 @@ jobs:
         with:
           context: "{{defaultContext}}:CleanFtp"
           push: ${{ github.event_name != 'pull_request' }}
-          tags: traffiqq/cleanFtp:latest
+          tags: traffiqq/cleanftp:latest
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
