--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -83,7 +83,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: "{{defaultContext}}:CleanFtp"
+          context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: traffiqq/cleanftp:latest
           labels: ${{ steps.meta.outputs.labels }}
