play around with ghcr.io #2

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag ghcr.io/traffiqq/store:latest
-          docker push ghcr.io/traffiqq/store:latest
+          docker build . --tag ghcr.io/traffiq/ftpCleaner:latest
+          docker push ghcr.io/traffiq/ftpCleaner:latest
