--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag ghcr.io/traffiq/ftpcleaner:latest
-          docker push ghcr.io/traffiq/ftpcleaner:latest
+          docker build . --tag ghcr.io/traffiqq/ftpcleaner:latest
+          docker push ghcr.io/traffiqq/ftpcleaner:latest
