environment variables docker -e "CycleTimeInHours=1; DeleteOlderThanXDays=14; DRY_RUN=Y; FTP_DIRECTORY=/reolink; FTP_HOST=localhost; FTP_PASSWORD=pass; FTP_USER=test; FTP_PORT=21"

--- a/CleanFtp/Properties/launchSettings.json
+++ b/CleanFtp/Properties/launchSettings.json
@@ -4,14 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development",
-        "FTP_HOST": "HOST",
-        "FTP_USER": "USER",
-        "FTP_PASSWORD": "PASSWORD",
-        "FTP_DIRECTORY": "/path",
-        "DeleteOlderThanXDays": "14",
-        "DRY_RUN": "N",
-        "CYCLE_TIME": "24"
+        "DOTNET_ENVIRONMENT": "Development"        
       }
     }
   }
